--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
 body, h1, h2, h3, h4, p, a {
   margin: 0;
   font-size: 100%;
