--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -5,6 +5,11 @@
     height: 80px;
 }
 
+.bar:hover {
+    background-color: #e5e5e5;
+    cursor: pointer;
+}
+
 .bar__icon {
     margin: 0 15px;
     display: flex;
