--- a/src/components/RightColumn/Dialog/Messages/Messages.css
+++ b/src/components/RightColumn/Dialog/Messages/Messages.css
@@ -43,3 +43,17 @@
     display: block;
 }
 
+.message__panel {
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+.message__panel__textarea {
+    margin: 0 20px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    width: 546px;
+    height: 34px;
+    resize: none;   
+}
