--- a/src/components/RightColumn/Dialog/Messages/Messages.css
+++ b/src/components/RightColumn/Dialog/Messages/Messages.css
@@ -52,14 +52,21 @@
 }
 
 .message__avatar {
-    margin-right: 5px;
+    margin-right: 12px;
     width: 50px;
 }
 
 .message__text {
-    margin-bottom: 8px;
     display: block;
     flex-grow: 1;
+    font-size: 15px;
+}
+
+.message__text__name {
+    margin-bottom: 8px;
+    font-size: 18px;
+    font-family: 'Noto Serif JP';
+    font-weight: 900;
 }
 
 .message__time {
