--- a/src/components/RightColumn/Messages/Messages.css
+++ b/src/components/RightColumn/Messages/Messages.css
@@ -1,9 +1,19 @@
 .messages {
     margin-top: 18px;
     padding: 0 75px;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
+    height: 100%;
     overflow-y: auto;
+}
+
+.messages__emptyChat {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    color: #848482;
 }
 
 .messages__panel {
@@ -24,6 +34,7 @@
 .dateMessages {
     display: flex;
     flex-direction: column;
+    width: 100%
 }
 
 .dateMessages__date {
@@ -34,7 +45,7 @@
     align-self: center;
     width: 165px;
     height: 36px;
-    background-color: #EAEAE9;
+    background-color: #eaeae9;
     border-radius: 10px;
     text-align: center;
     font-size: 18px;
