--- a/src/components/RightColumn/Messages/Messages.css
+++ b/src/components/RightColumn/Messages/Messages.css
@@ -1,6 +1,6 @@
 .messages {
-    margin-top: 18px;
-    padding: 0 75px;
+    margin-bottom: 58px;
+    padding: 18px 75px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,21 +14,6 @@
     align-items: center;
     flex-grow: 1;
     color: #848482;
-}
-
-.messages__panel {
-    margin-bottom: 25px;
-    display: flex;
-    justify-content: center;
-}
-
-.messages__panel__textarea {
-    margin: 0 20px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    width: 546px;
-    height: 34px;
-    resize: none;   
 }
 
 .dateMessages {
