YTASK-11: improve padding for message

--- a/src/components/RightColumn/Messages/Messages.css
+++ b/src/components/RightColumn/Messages/Messages.css
@@ -64,6 +64,11 @@
     font-weight: 900;
 }
 
+.message__text__message {
+    padding-right: 38px;
+    text-align: justify;
+}
+
 .message__time {
     display: flex;
     align-items: center;
