--- a/src/components/RightColumn/Messages/Messages.css
+++ b/src/components/RightColumn/Messages/Messages.css
@@ -23,11 +23,12 @@
 
 .dateMessages__date {
     margin-bottom: 12px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     align-self: center;
-    width: 165px;
+    min-width: 165px;
     height: 36px;
     background-color: #eaeae9;
     border-radius: 10px;
