YTASK-13: add routes

--- a/src/components/LeftColumn/ChatList/ChatBar/ChatBar.css
+++ b/src/components/LeftColumn/ChatList/ChatBar/ChatBar.css
@@ -1,8 +1,14 @@
+li {
+    list-style-type: none;
+}
+  
 .bar {
     display: flex;
     align-items: center;
     width: 360px;
     height: 80px;
+    text-decoration: none;
+    color: inherit;
 }
 
 .bar:hover {
